# LotteryTask

./: .env  .gitignore  Dockerfile  README.md  curl-util.py  docker-compose.yaml  main.py  notes.md  openapi.yaml  pyproject.toml
app/apis/: main.py
app/apis/routes/: ballot_routes.py  lottery_routes.py  main_routes.py  participant_routes.py  winner_ballots_routes.py
app/configs/: __init__.py  config.py
app/db/: database.py
app/db/sql/: DB.sql
app/middleware/: exception_handler.py  request_logger.py
app/middleware/exceptions/: ballot_service_exceptions.py  base_exceptions.py  lottery_service_exceptions.py  participant_service_exceptions.py  winner_service_exceptions.py
app/models/: __init__.py  ballot.py  lottery.py  participant.py  winning_ballots.py
app/repositories/: ballot_repository.py  base_repository.py  lottery_repository.py  participant_repository.py  winner_ballots_repository.py
app/repositories/interfaces/: ballot_repo_interface.py  base_repo_interface.py  lottery_repo_interface.py  participant_repo_interface.py  winner_ballots_repo_interface.py
app/schemas/: ballots.py  lottery.py  participant.py  winning_ballot.py
app/services/: ballot_service.py  lottery_service.py  participant_service.py  winner_service.py
init-scripts/: DB.sql
